--- a/.github/workflows/build-kernelsu.yml
+++ b/.github/workflows/build-kernelsu.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04
-    timeout-minutes: 90
+    timeout-minutes: 120
 
     steps:
     - name: 检出仓库
@@ -29,10 +29,6 @@ jobs:
         sudo rm -rf "$AGENT_TOOLSDIRECTORY"
         sudo rm -rf /usr/local/lib/android
         sudo rm -rf /opt/hostedtoolcache/CodeQL
-        sudo rm -rf /usr/local/graalvm/
-        sudo rm -rf /usr/local/share/powershell
-        sudo rm -rf /usr/local/share/chromium
-        sudo rm -rf /usr/local/lib/node_modules
 
         echo "清理APT缓存..."
         sudo apt-get clean
@@ -40,7 +36,6 @@ jobs:
 
         echo "===== 清理后磁盘使用 ====="
         df -h
-        echo "可用空间: $(df -h / | awk 'NR==2 {print $4}')"
 
     - name: 安装编译依赖
       run: |
@@ -53,232 +48,42 @@ jobs:
           xsltproc zip zlib1g-dev python3 python3-pip device-tree-compiler wget \
           gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
 
-        echo "GCC版本:"
-        aarch64-linux-gnu-gcc --version
-
-    - name: 设置ccache
-      uses: hendrikmuhs/ccache-action@v1.2
-      with:
-        max-size: "2G"
-
-    - name: 下载内核源码（使用压缩包）
+    - name: 下载内核源码
       run: |
         cd $HOME
-        echo "开始下载内核源码压缩包..."
-
-        # 直接下载ZIP压缩包
+        echo "下载内核源码..."
         wget -q --show-progress --timeout=300 \
           https://github.com/MiCode/Xiaomi_Kernel_OpenSource/archive/refs/heads/camellia-r-oss.zip \
-          -O kernel.zip || {
-            echo "GitHub下载失败，尝试加速链接..."
-            wget -q --show-progress --timeout=300 \
-              https://ghproxy.com/https://github.com/MiCode/Xiaomi_Kernel_OpenSource/archive/refs/heads/camellia-r-oss.zip \
-              -O kernel.zip || {
-                echo "再次尝试镜像..."
-                wget -q --show-progress --timeout=300 \
-                  https://gh.api.99988866.xyz/https://github.com/MiCode/Xiaomi_Kernel_OpenSource/archive/refs/heads/camellia-r-oss.zip \
-                  -O kernel.zip
-              }
-          }
+          -O kernel.zip || \
+        wget -q --show-progress --timeout=300 \
+          https://ghproxy.com/https://github.com/MiCode/Xiaomi_Kernel_OpenSource/archive/refs/heads/camellia-r-oss.zip \
+          -O kernel.zip
 
-        echo "解压内核源码..."
         unzip -q kernel.zip
         mv Xiaomi_Kernel_OpenSource-camellia-r-oss kernel
         rm kernel.zip
-
-        echo "内核源码准备完成"
-        ls -la kernel/
 
     - name: 下载KernelSU
       run: |
         cd $HOME
         echo "下载KernelSU..."
-
-        if [ -n "${{ github.event.inputs.kernelsu_version }}" ]; then
-          wget -q --show-progress \
-            https://github.com/tiann/KernelSU/archive/refs/tags/${{ github.event.inputs.kernelsu_version }}.zip \
-            -O kernelsu.zip || \
-          wget -q --show-progress \
-            https://ghproxy.com/https://github.com/tiann/KernelSU/archive/refs/tags/${{ github.event.inputs.kernelsu_version }}.zip \
-            -O kernelsu.zip
-        else
-          wget -q --show-progress \
-            https://github.com/tiann/KernelSU/archive/refs/heads/main.zip \
-            -O kernelsu.zip || \
-          wget -q --show-progress \
-            https://ghproxy.com/https://github.com/tiann/KernelSU/archive/refs/heads/main.zip \
-            -O kernelsu.zip
-        fi
+        wget -q --show-progress \
+          https://github.com/tiann/KernelSU/archive/refs/heads/main.zip \
+          -O kernelsu.zip || \
+        wget -q --show-progress \
+          https://ghproxy.com/https://github.com/tiann/KernelSU/archive/refs/heads/main.zip \
+          -O kernelsu.zip
 
         unzip -q kernelsu.zip
         mv KernelSU-* KernelSU
         rm kernelsu.zip
 
-        echo "KernelSU准备完成"
-        ls -la KernelSU/kernel/
-
-    - name: 集成KernelSU到内核
+    - name: 集成KernelSU
       run: |
         cd $HOME/kernel
-
-        # 复制KernelSU模块到内核
         cp -r $HOME/KernelSU/kernel drivers/kernelsu
-
-        # 验证
-        if [ -d "drivers/kernelsu" ]; then
-          echo "✅ KernelSU集成成功"
-          ls -la drivers/kernelsu/
-        else
-          echo "❌ KernelSU集成失败"
-          exit 1
-        fi
-
-        # 修改Makefile
-        if ! grep -q "kernelsu" drivers/Makefile; then
-          echo 'obj-y += kernelsu/' >> drivers/Makefile
-          echo "已添加KernelSU到Makefile"
-        fi
-
-        # 修改Kconfig
-        if ! grep -q "kernelsu" drivers/Kconfig; then
-          echo 'source "drivers/kernelsu/Kconfig"' >> drivers/Kconfig
-          echo "已添加KernelSU到Kconfig"
-        fi
-
-        echo "KernelSU集成配置完成"
-
-    - name: 精确修复头文件问题
-      run: |
-        cd $HOME/kernel
-
-        echo "===== 开始精确修复头文件问题 ====="
-
-        # 修复具体的文件，避免误伤
-        echo "修复fs/sdcardfs/dentry.c..."
-        if [ -f "fs/sdcardfs/dentry.c" ]; then
-          # 只修复特定的错误行
-          sed -i 's/#include <linux\/ctype\.h"/#include <linux\/ctype.h>/g' fs/sdcardfs/dentry.c
-        fi
-
-        echo "修复drivers/cpuidle/cpuidle.c..."
-        if [ -f "drivers/cpuidle/cpuidle.c" ]; then
-          # 只修复特定的错误行
-          sed -i 's/#include <linux\/clockchips\.h"/#include <linux\/clockchips.h>/g' drivers/cpuidle/cpuidle.c
-        fi
-
-        echo "修复drivers/clk/mediatek/clkdbg-mt6833.c..."
-        if [ -f "drivers/clk/mediatek/clkdbg-mt6833.c" ]; then
-          sed -i 's/#include <clk-mux\.h>/#include "clk-mux.h"/g' drivers/clk/mediatek/clkdbg-mt6833.c
-        fi
-
-        echo "修复drivers/cpuidle/cpuidle-mediatek.c..."
-        if [ -f "drivers/cpuidle/cpuidle-mediatek.c" ]; then
-          sed -i 's/#include <dt_idle_states\.h>/#include "dt_idle_states.h"/g' drivers/cpuidle/cpuidle-mediatek.c
-        fi
-
-        echo "修复drivers/devfreq/helio-dvfsrc-v3/helio-dvfsrc-qos.c..."
-        if [ -f "drivers/devfreq/helio-dvfsrc-v3/helio-dvfsrc-qos.c" ]; then
-          sed -i 's/#include <helio-dvfsrc-qos\.h>/#include "helio-dvfsrc-qos.h"/g' drivers/devfreq/helio-dvfsrc-v3/helio-dvfsrc-qos.c
-        fi
-
-        # 查找并修复所有损坏的头文件引用（结尾是"而不是>）
-        echo "查找并修复所有损坏的头文件引用..."
-        find . -name "*.c" -type f | while read file; do
-          # 修复以"结尾的include语句
-          if grep -q '#include.*\.h"$' "$file"; then
-            echo "修复文件: $file"
-            # 备份原文件
-            cp "$file" "${file}.bak"
-            # 修复错误的引号
-            sed -i 's/#include <\([^>]*\)\.h"/#include <\1.h>/g' "$file"
-            sed -i 's/#include "\([^"]*\)\.h"/#include "\1.h"/g' "$file"
-          fi
-        done
-
-        echo "===== 头文件修复完成 ====="
-
-    - name: 配置内核（最小化配置）
-      run: |
-        cd $HOME/kernel
-
-        export ARCH=arm64
-        export SUBARCH=arm64
-        export CROSS_COMPILE=aarch64-linux-gnu-
-
-        # 使用camellia默认配置
-        echo "应用默认配置..."
-        make camellia_defconfig
-
-        echo "===== 开始最小化配置 ====="
-
-        # 禁用所有可能有问题的可选功能
-        echo "禁用SDCARD FS..."
-        scripts/config --disable CONFIG_SDCARD_FS
-
-        echo "禁用MT6833时钟驱动..."
-        scripts/config --disable CONFIG_COMMON_CLK_MT6833
-        scripts/config --disable CONFIG_COMMON_CLK_MT6833_AUDIO
-        scripts/config --disable CONFIG_COMMON_CLK_MT6833_CAMSYS
-        scripts/config --disable CONFIG_COMMON_CLK_MT6833_IMGSYS
-        scripts/config --disable CONFIG_COMMON_CLK_MT6833_IPESYS
-        scripts/config --disable CONFIG_COMMON_CLK_MT6833_MDPSYS
-        scripts/config --disable CONFIG_COMMON_CLK_MT6833_MFGCFG
-        scripts/config --disable CONFIG_COMMON_CLK_MT6833_MMSYS
-        scripts/config --disable CONFIG_COMMON_CLK_MT6833_VDECSYS
-        scripts/config --disable CONFIG_COMMON_CLK_MT6833_VENCSYS
-
-        echo "禁用CPUIDLE..."
-        scripts/config --disable CONFIG_CPU_IDLE
-        scripts/config --disable CONFIG_CPU_IDLE_GOV_LADDER
-        scripts/config --disable CONFIG_CPU_IDLE_GOV_MENU
-        scripts/config --disable CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT
-        scripts/config --disable CONFIG_MTK_CPUIDLE
-        scripts/config --disable CONFIG_ARM_CPUIDLE
-
-        echo "禁用DVFSRC..."
-        scripts/config --disable CONFIG_MTK_DVFSRC
-        scripts/config --disable CONFIG_MTK_DVFSRC_DEVFREQ
-        scripts/config --disable CONFIG_HELIO_DVFSRC_V3
-        scripts/config --disable CONFIG_ARM_MT6833_CPUFREQ
-        scripts/config --disable CONFIG_ARM_MEDIATEK_CPUFREQ
-
-        echo "禁用DEVFREQ..."
-        scripts/config --disable CONFIG_PM_DEVFREQ
-        scripts/config --disable CONFIG_DEVFREQ_GOV_SIMPLE_ONDEMAND
-        scripts/config --disable CONFIG_DEVFREQ_GOV_PERFORMANCE
-        scripts/config --disable CONFIG_DEVFREQ_GOV_POWERSAVE
-        scripts/config --disable CONFIG_DEVFREQ_GOV_USERSPACE
-        scripts/config --disable CONFIG_DEVFREQ_GOV_PASSIVE
-
-        # 禁用栈保护
-        echo "禁用栈保护..."
-        scripts/config --disable CONFIG_CC_STACKPROTECTOR_STRONG
-        scripts/config --disable CONFIG_CC_STACKPROTECTOR
-        scripts/config --disable CONFIG_STACKPROTECTOR
-        scripts/config --disable CONFIG_STACKPROTECTOR_STRONG
-
-        # 启用KernelSU需要的选项
-        echo "启用KernelSU..."
-        scripts/config --enable CONFIG_KPROBES
-        scripts/config --enable CONFIG_HAVE_KPROBES
-        scripts/config --enable CONFIG_KPROBE_EVENTS
-        scripts/config --enable CONFIG_MODULES
-        scripts/config --enable CONFIG_MODULE_UNLOAD
-        scripts/config --enable CONFIG_MODULE_FORCE_UNLOAD
-
-        # 添加KernelSU配置
-        echo "CONFIG_KSU=y" >> .config
-        echo "CONFIG_KSU_DEBUG=n" >> .config
-
-        # 更新配置
-        make olddefconfig
-
-        echo "===== 配置完成 ====="
-        echo "验证关键配置:"
-        echo "KernelSU: $(grep CONFIG_KSU=y .config && echo '已启用' || echo '未启用')"
-        echo "KPROBES: $(grep CONFIG_KPROBES=y .config && echo '已启用' || echo '未启用')"
-        echo "SDCARD_FS: $(grep CONFIG_SDCARD_FS .config || echo '已禁用')"
-        echo "CPU_IDLE: $(grep CONFIG_CPU_IDLE .config || echo '已禁用')"
+        echo 'obj-y += kernelsu/' >> drivers/Makefile
+        echo 'source "drivers/kernelsu/Kconfig"' >> drivers/Kconfig
 
     - name: 编译内核
       run: |
@@ -287,112 +92,152 @@ jobs:
         export ARCH=arm64
         export SUBARCH=arm64
         export CROSS_COMPILE=aarch64-linux-gnu-
-        export CROSS_COMPILE_ARM32=arm-linux-gnueabi-
         export KCFLAGS="-w"
-        export CONFIG_CC_STACKPROTECTOR_STRONG=n
 
-        echo "开始编译内核 (使用 $(nproc) 线程)..."
-        echo "预计需要15-25分钟..."
-        echo "================="
-
-        # 清理之前的编译
-        make mrproper
-
-        # 重新配置（因为mrproper会清除配置）
+        echo "配置内核..."
         make camellia_defconfig
+
+        # 添加KernelSU
         echo "CONFIG_KSU=y" >> .config
         make olddefconfig
 
-        # 编译内核镜像
-        make -j$(nproc) Image.gz-dtb 2>&1 | tee compile.log | tail -n 100
+        echo "开始编译..."
+        make -j$(nproc) Image.gz-dtb 2>&1 | tee build.log || true
 
-        # 检查编译结果
-        if [ -f arch/arm64/boot/Image.gz-dtb ]; then
-          echo "================="
-          echo "✅ 内核编译成功!"
+        echo ""
+        echo "===== 查找编译产物 ====="
+
+        # 查找所有可能的内核镜像位置
+        echo "查找Image.gz-dtb..."
+        find . -name "Image.gz-dtb" -type f 2>/dev/null | while read f; do
+          echo "找到: $f ($(ls -lh "$f" | awk '{print $5}'))"
+        done
+
+        echo ""
+        echo "查找Image.gz..."
+        find . -name "Image.gz" -type f 2>/dev/null | while read f; do
+          echo "找到: $f ($(ls -lh "$f" | awk '{print $5}'))"
+        done
+
+        echo ""
+        echo "查找Image..."
+        find . -name "Image" -type f 2>/dev/null | while read f; do
+          echo "找到: $f ($(ls -lh "$f" | awk '{print $5}'))"
+        done
+
+        echo ""
+        echo "查找zImage..."
+        find . -name "zImage" -type f 2>/dev/null | while read f; do
+          echo "找到: $f ($(ls -lh "$f" | awk '{print $5}'))"
+        done
+
+        echo ""
+        echo "查找vmlinux..."
+        if [ -f "vmlinux" ]; then
+          echo "找到vmlinux ($(ls -lh vmlinux | awk '{print $5}'))"
+        fi
+
+        echo ""
+        echo "===== 尝试继续编译 ====="
+
+        # 如果没有找到Image.gz-dtb，尝试单独编译
+        if [ ! -f "arch/arm64/boot/Image.gz-dtb" ]; then
+          echo "尝试编译Image..."
+          make Image || true
+
+          echo "尝试编译dtbs..."
+          make dtbs || true
+
+          echo "尝试手动合并..."
+          if [ -f "arch/arm64/boot/Image" ]; then
+            echo "压缩Image..."
+            gzip -c arch/arm64/boot/Image > arch/arm64/boot/Image.gz || true
+          fi
+
+          if [ -f "arch/arm64/boot/Image.gz" ] && [ -d "arch/arm64/boot/dts" ]; then
+            echo "尝试合并dtb..."
+            # 查找dtb文件
+            DTB=$(find arch/arm64/boot/dts -name "*.dtb" 2>/dev/null | head -1)
+            if [ -n "$DTB" ]; then
+              echo "使用DTB: $DTB"
+              cat arch/arm64/boot/Image.gz "$DTB" > arch/arm64/boot/Image.gz-dtb
+            fi
+          fi
+        fi
+
+        echo ""
+        echo "===== 最终检查 ====="
+
+        # 最终检查
+        if [ -f "arch/arm64/boot/Image.gz-dtb" ]; then
+          echo "✅ 成功找到Image.gz-dtb!"
           ls -lh arch/arm64/boot/Image.gz-dtb
+        elif [ -f "arch/arm64/boot/Image" ]; then
+          echo "⚠️ 只找到Image，使用它代替"
+          cp arch/arm64/boot/Image arch/arm64/boot/Image.gz-dtb
+        elif [ -f "vmlinux" ]; then
+          echo "⚠️ 只找到vmlinux，尝试提取"
+          aarch64-linux-gnu-objcopy -O binary vmlinux arch/arm64/boot/Image
+          gzip -c arch/arm64/boot/Image > arch/arm64/boot/Image.gz-dtb
         else
-          echo "================="
-          echo "❌ 内核编译失败"
-          echo "显示最后100行编译日志："
-          tail -n 100 compile.log
-          echo "尝试查找可能的内核文件..."
-          find . -name "Image*" -type f 2>/dev/null | head -20
+          echo "❌ 未找到任何内核文件"
+          echo "显示编译日志最后100行："
+          tail -n 100 build.log
           exit 1
         fi
 
-    - name: 打包编译产物
+    - name: 打包产物
       run: |
-        mkdir -p $HOME/output
+        mkdir -p output
 
-        # 复制内核
-        cp $HOME/kernel/arch/arm64/boot/Image.gz-dtb $HOME/output/
-        echo "内核文件大小: $(ls -lh $HOME/output/Image.gz-dtb | awk '{print $5}')"
+        # 复制内核（如果存在）
+        if [ -f "$HOME/kernel/arch/arm64/boot/Image.gz-dtb" ]; then
+          cp "$HOME/kernel/arch/arm64/boot/Image.gz-dtb" output/
+          echo "内核大小: $(ls -lh output/Image.gz-dtb | awk '{print $5}')"
+        elif [ -f "$HOME/kernel/arch/arm64/boot/Image" ]; then
+          cp "$HOME/kernel/arch/arm64/boot/Image" output/Image.gz-dtb
+          echo "使用未压缩内核，大小: $(ls -lh output/Image.gz-dtb | awk '{print $5}')"
+        fi
 
-        # 下载boot.img处理工具
-        cd $HOME/output
-        echo "下载boot.img处理工具..."
-        wget -q https://github.com/topjohnwu/Magisk/releases/latest/download/Magisk-26.4.apk || \
-        wget -q https://ghproxy.com/https://github.com/topjohnwu/Magisk/releases/latest/download/Magisk-26.4.apk
-
+        # 下载magiskboot
+        cd output
+        wget -q https://github.com/topjohnwu/Magisk/releases/latest/download/Magisk-26.4.apk
         unzip -q -j Magisk-26.4.apk 'lib/x86_64/libmagiskboot.so'
         mv libmagiskboot.so magiskboot
         chmod +x magiskboot
         rm Magisk-26.4.apk
 
-        # 创建使用脚本
-        cat > make_boot.sh << 'SCRIPT_END'
+        # 创建脚本
+        cat > make_boot.sh << 'EOF'
         #!/bin/bash
-        echo "KernelSU Boot.img 制作工具"
-        echo "========================="
-
+        echo "KernelSU Boot制作工具"
         if [ ! -f boot.img ]; then
-          echo "错误: 请先放入原版boot.img"
+          echo "请放入原版boot.img"
           exit 1
         fi
-
         ./magiskboot unpack boot.img
         cp Image.gz-dtb kernel
         ./magiskboot repack boot.img
-
-        echo "完成! 生成: new-boot.img"
-        echo "刷入: fastboot flash boot new-boot.img"
-        SCRIPT_END
+        echo "完成! 输出: new-boot.img"
+        EOF
         chmod +x make_boot.sh
 
-        # 创建说明文件
-        cat > README.txt << 'README_END'
-        KernelSU内核 - 红米Note 10 (camellia)
-        ====================================
+        # 创建说明
+        cat > README.txt << 'EOF'
+        KernelSU内核 - 红米Note 10
+
+        注意：如果内核文件很大(>50MB)，可能是未压缩的Image
+        这种情况下刷入可能会失败，请谨慎测试
 
         使用步骤:
-        1. 备份原版boot.img
-        2. 将boot.img放入本目录
-        3. 运行 ./make_boot.sh
-        4. 刷入 new-boot.img
-        5. 安装KernelSU管理器
+        1. 备份原boot.img
+        2. 运行make_boot.sh
+        3. 刷入new-boot.img
+        4. 安装KernelSU管理器
+        EOF
 
-        KernelSU管理器下载:
-        https://github.com/tiann/KernelSU/releases
-        README_END
-
-    - name: 上传编译结果
+    - name: 上传结果
       uses: actions/upload-artifact@v4
       with:
-        name: KernelSU-Camellia-${{ github.run_number }}
-        path: |
-          /home/runner/output/
-
-    - name: 生成摘要报告
-      run: |
-        echo "# ✅ KernelSU内核编译成功!" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "## 📱 红米Note 10 (camellia)" >> $GITHUB_STEP_SUMMARY
-        echo "- 内核大小: $(ls -lh $HOME/output/Image.gz-dtb | awk '{print $5}')" >> $GITHUB_STEP_SUMMARY
-        echo "- 构建号: #${{ github.run_number }}" >> $GITHUB_STEP_SUMMARY
-        echo "" >> $GITHUB_STEP_SUMMARY
-        echo "## 📥 下载后:" >> $GITHUB_STEP_SUMMARY
-        echo "1. 解压文件" >> $GITHUB_STEP_SUMMARY
-        echo "2. 查看README.txt" >> $GITHUB_STEP_SUMMARY
-        echo "3. 使用make_boot.sh制作boot.img" >> $GITHUB_STEP_SUMMARY
-        echo "4. 刷入并安装KernelSU管理器" >> $GITHUB_STEP_SUMMARY
+        name: KernelSU-Camellia
+        path: output/
